tests/cheri-ci/expected/0235-array-static-innermost.error.c.expected
cheri-ci/0235-array-static-innermost.error.c:1:14: error: constraint violation: type qualifiers or 'static' used in array declarator outside of function prototype
void f (char a[static 100][]) {}
             ^~~~~~~~~~~~~ 
ยง6.7.6.2#1, sentence 5: 
1   In addition to optional type qualifiers and the keyword static, the [ and ] may delimit
    an expression or *. If they delimit an expression (which specifies the size of an array), the
    expression shall have an integer type. If the expression is a constant expression, it shall
    have a value greater than zero. The element type shall not be an incomplete or function
    type. The optional type qualifiers and the keyword static shall appear only in a
    declaration of a function parameter with an array type, and then only in the outermost
    array type derivation.
